# Dualarms

./: .ccls  Makefile  Makefile.am  Makefile.in  autogen.sh  config.status  configure  configure.ac  configure~
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.3
include/: Handler.h  log.h  logmanager.h  main.h  util.h  web.h
lib/: Makefile  Makefile.am  Makefile.in  logmanager.cpp  util.cpp
lib/.deps/: logmanager.Po  test.Po  util.Po
src/: .gdb_history  Makefile  Makefile.am  Makefile.in  logconfig  main.cpp  tags  valgrind-out.txt
src/.deps/: main.Po
src/web_api/: CMakeLists.txt  db.sqlite
src/web_api/.cache/clangd/index/: App.cpp.E9187D407CC06902.idx  AppComponent.hpp.BF2A8D0C3003B453.idx  DatabaseComponent.hpp.D0515FBB6C77EE49.idx  ErrorHandler.cpp.440670E32A39089E.idx  ErrorHandler.hpp.A0F466A0CA059097.idx  PageDto.hpp.6975B4F59D7BA577.idx  StaticController.hpp.3ACAE8E6D182C060.idx  StatusDto.hpp.AD9BAC1EE1231E7B.idx  SwaggerComponent.hpp.5CB754D3AC18E937.idx  TestClient.hpp.5AD099FF59D8118B.idx  TestComponent.hpp.E1953A78967909D0.idx  TestDatabaseComponent.hpp.AAF10A97643375FF.idx  UserController.hpp.60B677649C840A3A.idx  UserControllerTest.cpp.228DAC5991621D10.idx  UserControllerTest.hpp.7A74E1A885B7E79C.idx  UserDb.hpp.C22BCF3EDCC0BA1C.idx  UserDto.hpp.BD8F24FF438238EB.idx  UserService.cpp.81843ED3FA2D901E.idx  UserService.hpp.1B6FCE8369950125.idx  tests.cpp.9C003C5E448D3158.idx
src/web_api/src/: App.cpp
src/web_api/src/db/: UserDb.hpp
test/: Makefile  Makefile.am  Makefile.in  Test.cpp  UtilTest.cpp
test/.deps/: Test.Po  UtilTest.Po
